--- a/Pages/css/Post.css
+++ b/Pages/css/Post.css
@@ -8,6 +8,10 @@ body {
     background-color: var(--background-color);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .thread {
     display: flex;
     flex-direction: column;
