update timeAgo for page post and comment

--- a/views/post.hbs
+++ b/views/post.hbs
@@ -93,7 +93,7 @@
                             <span class="username" style="font-weight: 600;">{{author_id.username}}</span>
                         </a>
                         <span> • </span>
-                        <span class="time">{{created_at}}</span>
+                        <span class="time">{{timeAgo}}</span>
                     </div>
                     <div class="comment-block">
                         {{#if content}}
