authenticate for notification

--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -32,7 +32,7 @@
             <p>
                 <span class="notification-username">{{sender_id.username}}</span>
                 <span> • </span>
-                <span class="time">{{time}}</span>
+                <span class="time">{{timeAgo}}</span>
             </p>
             <p>
                 {{#if (eq type 'comment_post')}}
