--- a/views/post.hbs
+++ b/views/post.hbs
@@ -66,7 +66,8 @@
                             postId: '{{post._id}}',
                             authorId: '{{user.id}}',
                             username: '{{user.username}}',
-                            profilePicUrl: '{{user.profile_pic_url}}'
+                            profilePicUrl: '{{user.profile_pic_url}}',
+                            postAuthorId: '{{post.author_id._id}}'
                             })">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
