--- a/Pages/css/search.css
+++ b/Pages/css/search.css
@@ -15,6 +15,15 @@ body {
     gap: 15px;
 }
 
+.information {
+    width: 100%;
+    font-size: 0.9rem;
+    font-family: var(--font-family-system);
+    text-align: center;
+    resize: none;
+    overflow: hidden; 
+}
+
 .search-page {
     display: flex;
     align-items: center;
