fix avatar and username of add-post section

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
     <div class="add-post header">
         <div class="add-post-area">
             <div class="add-post-user-info">
-                <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile picture" class="profile-pic">
+                <img src="{{user.profile_pic_url}}" alt="Profile picture" class="profile-pic">
             </div>
             <div class="add-post-block" onclick="togglePopup()">
                 <p class="comment-input hover-element">Share something...</p>
