--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -30,7 +30,7 @@
             posts
         </div>
         <div class="bar"></div>
-        <div class="follower-count" onclick="togglePopupFollower()">
+        <div class="follower-count" onclick="togglePopupFollower(1)">
             <span>{{#if user.followers.length }}
                 {{ user.followers.length }}
                 {{ else}}
@@ -39,7 +39,7 @@
             followers
         </div>
         <div class="bar"></div>
-        <div class="following-count" onclick="togglePopupFollower()">
+        <div class="following-count" onclick="togglePopupFollower(2)">
             <span>{{#if user.followings.length }}
                 {{ user.followings.length }}
                 {{ else}}
@@ -58,9 +58,9 @@
                     Cancel
                 </button>
             </div>
-            <!-- <form action=""> -->
+            <form id="edit-info">
             <div id="profile-picture" class="">
-                <img src="https://pub-b0a9bdcea1cd4f6ca28d98f878366466.r2.dev/1731293754064" alt="Profile picture"
+                <img src="{{user.profile_pic_url}}" alt="Profile picture"
                     class="rounded-circle">
                 <div class="avatar-upload">
                     <label for="file" class="upload-label">
@@ -80,24 +80,23 @@
             </div>
 
             <label for="username">Username</label><br>
-            <input type="text" name="username" id="username" maxlength="15" placeholder="phkhang"><br>
+            <input type="text" name="username" id="username" maxlength="15" placeholder="{{user.username}}" value="{{user.username}}"><br>
 
             <label class="mt-1" for="full-name">Full name</label><br>
-            <input type="text" name="full-name" id="full-name" placeholder="Tran Nguyen Phuc Khang"><br>
+            <input type="text" name="full-name" id="full-name" placeholder="{{user.full_name}}" value="{{user.full_name}}"><br>
 
             <label class="mt-1" for="bio">Bio</label><br>
             <textarea name="bio" id="bio" cols="30" rows="6" maxlength="150"
-                placeholder="Write bio (max 150 characters)"></textarea><br>
+                placeholder="Write bio (max 150 characters)">{{user.bio}}</textarea><br>
 
             <label for="old-password">Change password</label><br>
             <input type="password" name="old-password" id="old-password" placeholder="Old password"><br>
             <input class="mt-1" type="password" name="new-password" id="new-password" placeholder="New password">
 
-            <button type="button" class="edit edit-btn mt-3 mb-2" id="change"
-                onclick="document.querySelector('.over').style.display = 'none'">
+            <button type="submit" class="edit edit-btn mt-3 mb-2" id="change">
                 <p>Save all changes</p>
             </button>
-            <!-- </form> -->
+            </form> 
         </div>
     </div>
     <button type="button" class="edit edit-btn mt-3 mb-2"
@@ -107,7 +106,7 @@
     <div class="add-post header" onclick="togglePopup()">
         <div class="add-post-area">
             <div class="add-post-user">
-                <img src="https://pub-b0a9bdcea1cd4f6ca28d98f878366466.r2.dev/1731293754064" alt="Profile picture"
+                <img src="{{user.profile_pic_url}}" alt="Profile picture"
                     class="profile-pic">
             </div>
             <div class="post-block">
@@ -131,25 +130,47 @@
     <div id="popup-follower" class="col-11 col-md-8 col-lg-5">
         <div id="heading-follower">
             <div class="follow-number">
-                <p class="tab active">Followers</p>
-                <p class="tab">Following</p>
+                <p id="followers-tab" class="tab active">Followers</p>
+                <p id="following-tab" class="tab">Following</p>
             </div>
             <div class="hover-element">
                 <!-- <p onclick="togglePopupFollower()">Cancel</p> -->
             </div>
         </div>
-        <div class="mt-2 follow-result">
-            {{#each user.followers }}
+        <div class="mt-2 follow-result following-tab">
+            {{#each user.followings }}
             <div class="search-result-item" data-type="user">
                 <div class="profile-pic">
-                    <img src="{{profile_pic_url}}" alt="User Avatar">
+                    <img src="{{this.profile_pic_url}}" alt="User Avatar">
                 </div>
                 <div class="search-text">
                     <a class="search-username" href="/otherProfile.html">
-                        <p>{{ username }}</p>
+                        <p>{{ this.username }}</p>
                     </a>
-                    <p class="search-user-bio">{{ full_name }}</p>
-                    <p class="mt-1">305 followers</p>
+                    <p class="search-user-bio">{{ this.full_name }}</p>
+                    {{!-- <p class="mt-1">305 followers</p> --}}
+                    {{!-- TODO: MAKE THIS  --}}
+                    <p class="mt-1 text-truncate" style="max-width: 130px;">{{this.bio}}</p>
+                </div>
+                <button class="follow-btn mt-1 me-1" onclick="toggleFollow(this)">
+                    <p>Follow</p>
+                </button>
+            </div>
+            {{/ each}}
+        </div>
+        <div class="mt-2 follow-result followers-tab">
+            {{#each user.followers }}
+            <div class="search-result-item" data-type="user">
+                <div class="profile-pic">
+                    <img src="{{this.profile_pic_url}}" alt="User Avatar">
+                </div>
+                <div class="search-text">
+                    <a class="search-username" href="/otherProfile.html">
+                        <p>{{ this.username }}</p>
+                    </a>
+                    <p class="search-user-bio">{{ this.full_name }}</p>
+                    {{!-- <p class="mt-1">305 followers</p> --}}
+                    <p class="mt-1 text-truncate" style="max-width: 130px;">{{this.bio}}</p>
                 </div>
                 <button class="follow-btn mt-1 me-1" onclick="toggleFollow(this)">
                     <p>Follow</p>
@@ -163,24 +184,24 @@
 <script src="/script/bio.js"></script>
 
 <script type="module">
-    const fetchButton = document.querySelector("#fetch")
-    fetchButton.addEventListener("click", fetchInfo)
+    {{!-- const fetchButton = document.querySelector("#fetch")
+    fetchButton.addEventListener("click", fetchInfo) --}}
     // const changeButton = document.querySelector("")
     // changeButton.addEventListener("click", changeInfo)
 
     document.getElementById('file').addEventListener('change', function (event) {
-        document.querySelector('.over').style.display = 'none'
-        console.log("Hey")
-        return;
+        {{!-- document.querySelector('.over').style.display = 'none' --}}
         const file = event.target.files[0];
         if (file) {
-            const reader = new FileReader();
+            /*const reader = new FileReader();
             reader.onload = function (e) {
                 const base64String = e.target.result.split(',')[1];
-                console.log(base64String);
-                document.querySelector('#profile-picture img').src = e.target.result;
+                {{!-- console.log(base64String); --}}
+                document.querySelector('.over #profile-picture img').src = e.target.result;
             };
-            reader.readAsDataURL(file);
+            reader.readAsDataURL(file);*/
+            document.querySelector('.over #profile-picture img').src = URL.createObjectURL(file); 
+            {{!-- console.log(document.querySelector('.over #profile-picture img').files[0]);  --}}
         }
     });
 </script>
