add: display comment after add new comment

--- a/views/post.hbs
+++ b/views/post.hbs
@@ -94,7 +94,7 @@
 
         <div id="commentsContainer">
             {{#each comments}}
-            <div class="comment">
+            <div id="comment-{{_id}}" class="comment">
                 <img src="{{author_id.profile_pic_url}}" alt="Profile picture" class="profile-pic">
                 <div class="user-info">
                     <div class="username">
