Update: get user profile and posts

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -59,7 +59,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="/profile/{{current_username}}" class="custom-nav-link {{#if (eq currentPath (concat "/profile/" current_username))}}active{{/if}}">
+                    <a href="/profile" class="custom-nav-link {{#if (eq currentPath (concat "/profile/" current_username))}}active{{/if}}">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="12" cy="7" r="4" fill="none" stroke="currentColor" stroke-width="2"/>
