--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="bio mt-2">
-        <p>{{user.bio}}</p>
+        <p>{{{user.bio}}}</p>
     </div>
     <div class="info mt-2">
         <div class="post-count">
